--- a/src/Components/AdminDashboard/PageContent/MainContent/MainContent.css
+++ b/src/Components/AdminDashboard/PageContent/MainContent/MainContent.css
@@ -15,7 +15,7 @@
 
 .main-content-header{
     font-size:1.5em;
-    color:purple;
+    color:#c82ae8;
     padding-bottom: 1rem;
     box-shadow: 0 3px 1px -3px #000000;
 }
