--- a/src/Components/AdminDashboard/AdminDashboard.css
+++ b/src/Components/AdminDashboard/AdminDashboard.css
@@ -1,6 +1,6 @@
 .dashboard-container{
     display:grid;
-    grid-template-rows: 5rem auto;
+    grid-template-rows: 5rem 4rem auto;
     width:100%;
     min-height:100%;
     background-color: rgb(238, 238, 238);
