--- a/src/Components/AdminDashboard/PageContent/PageContent.css
+++ b/src/Components/AdminDashboard/PageContent/PageContent.css
@@ -2,12 +2,9 @@
     height:calc(100vh - 10rem);
     width:calc(100% - 6rem);
     border-radius:2rem;
-    /* border-style:solid;
-    border-width:1px;
-    border-color:#999; */
+    
     background-color:white;
-
-    /* z-index:7; */
+    box-shadow: 0 2px 4px grey;
 
     display:grid;
     grid-template-columns: 16rem auto;
